--- a/day0.ipynb
+++ b/day0.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,8 @@
      "text": [
       "<class 'int'>\n",
       "<class 'float'>\n",
-      "<class 'complex'>\n"
+      "<class 'complex'>\n",
+      "(25+24j)\n"
      ]
     }
    ],
@@ -117,9 +118,10 @@
     "print(type(a))\n",
     "print(type(b))\n",
     "c = 13 + 12j \n",
-    "d = 13 + 12j \n",
+    "d = 12 + 12j \n",
     "\n",
-    "print(type(c))"
+    "print(type(e))\n",
+    "print(c+d)"
    ]
   },
   {
@@ -145,10 +147,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n",
+      "7\n",
+      "18\n",
+      "81\n",
+      "4.5\n",
+      "4\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 9 \n",
+    "b = 2 \n",
+    "print(9+2)\n",
+    "print(9-2)\n",
+    "print(9*2)\n",
+    "print(9**2)\n",
+    "print(9/2)\n",
+    "print(9//2)\n",
+    "print(9%2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Logical operator:-\n",
+    "- AND\n",
+    "- OR\n",
+    "- NOT\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import math \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['__doc__', '__file__', '__loader__', '__name__', '__package__', '__spec__', 'acos', 'acosh', 'asin', 'asinh', 'atan', 'atan2', 'atanh', 'ceil', 'copysign', 'cos', 'cosh', 'degrees', 'e', 'erf', 'erfc', 'exp', 'expm1', 'fabs', 'factorial', 'floor', 'fmod', 'frexp', 'fsum', 'gamma', 'gcd', 'hypot', 'inf', 'isclose', 'isfinite', 'isinf', 'isnan', 'ldexp', 'lgamma', 'log', 'log10', 'log1p', 'log2', 'modf', 'nan', 'pi', 'pow', 'radians', 'remainder', 'sin', 'sinh', 'sqrt', 'tan', 'tanh', 'tau', 'trunc']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dir(math))"
+   ]
   },
   {
    "cell_type": "code",
@@ -159,19 +221,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8900000000000006\n",
-      "<class 'float'>\n",
-      "<class 'int'>\n",
-      "<class 'complex'>\n",
-      "(9+12j)\n",
-      "this is hrkhan     hello this is hrkhan\n",
-      "1\n",
-      "4\n",
-      "32\n",
-      "-2\n",
-      "7\n",
-      "True\n",
-      "True\n",
+      "8.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(math.pow(2 , 3 ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "34\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(abs(-34))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "24\n",
       "23\n",
       "0.0\n",
@@ -187,41 +270,7 @@
     }
    ],
    "source": [
-    "a=45.89\n",
-    "b= 45\n",
-    "c=a-b\n",
-    "print(c)        ## 0.8900000000000006\n",
-    "print(type(a))  ##   <class 'float'>\n",
-    "print(type(b))   ##   <class 'int'>\n",
-    "V=3.4J\n",
-    "print(type(V))   ##    <class 'complex'>\n",
-    "a= 3+5j\n",
-    "b=6+7j\n",
-    "print(a+b)    ##(9+12j)\n",
     "\n",
-    "\n",
-    "a = \"this is hrkhan \"\n",
-    "b=\"    hello this is hrkhan\"\n",
-    "c= a+b\n",
-    "print(c)    ##this is hrkhan     hello this is hrkhan\n",
-    "\n",
-    "\n",
-    "a=9\n",
-    "b=2\n",
-    "c=a%b\n",
-    "d=a//b\n",
-    "print(c)   ## 1\n",
-    "print(d)   ## 4\n",
-    "print(2**5)   ##  32\n",
-    "a=5\n",
-    "b=7\n",
-    "a-=b\n",
-    "print(a)  ##  -2\n",
-    "print(b)  ## 7 \n",
-    "a=\"python\"\n",
-    "print(\"p\"in a)   ##True\n",
-    "print(\"t\"in a )   ##  True\n",
-    "\"\"\"importing module & library math \"\"\"\n",
     "import math\n",
     "##print(dir(math))  ## print all directory of maths\n",
     "print(math.ceil(23.4)) ## 24\n",
@@ -235,6 +284,25 @@
     "print(math.factorial(5))   ##  120\n",
     "print(math.gamma(3))     ##2.0\n",
     "print(math.copysign(-33,43))   ##33.0\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n",
+      "23\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(math.ceil(23.6)) \n",
+    "print(math.floor(23.6))"
    ]
   },
   {
