--- a/day2.ipynb
+++ b/day2.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -49,19 +49,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "python\n"
+      "java\n"
      ]
     }
    ],
    "source": [
-    "print(a[3]) "
+    "print(a[2]) "
    ]
   },
   {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -134,6 +134,78 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "099\n",
+      "99\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = (\"97\" , \"99\" , \"099\")\n",
+    "print(min(b))\n",
+    "print(max(b))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the index no  1\n",
+      "Enter the index no  2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 1, 3, 4, 5, 6, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1 = [1 , 2, 3, 4 ,5 ,6 , 7 ]\n",
+    "swap1 = int(input(\"Enter the index no \"))\n",
+    "swap2 = int(input(\"Enter the index no \"))\n",
+    "temp = l1[swap1-1]\n",
+    "l1[swap1-1] = l1[swap2-1]\n",
+    "l1[swap2-1] = temp\n",
+    "print(l1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -145,6 +217,55 @@
    "source": [
     "### string formating 2nd data type"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter name habib\n",
+      "enter branch  1234567\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dear habib your mobile no is 1234567  . thanks for taking our service \n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input(\"Enter name\")\n",
+    "number = input(\"enter branch \")\n",
+    "mail = \"Dear {} your mobile no is {}  . thanks for taking our service \".format(name , number)\n",
+    "print(mail)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -163,7 +284,8 @@
     "a=32\n",
     "b=21\n",
     "c=a+b\n",
-    "print('the sum of %d & %d is %d'%(a,b,c))  ## the sum of 32 & 21 is 53"
+    "\n",
+    "print('the sum of %d and %d is %d'%(a,b,c))  ## the sum of 32 & 21 is 53"
    ]
   },
   {
@@ -182,7 +304,7 @@
    ],
    "source": [
     "print('the sum of {} and {} is {}'.format(a,b,c) )  ## the sum of 32 and 21 is 53\n",
-    "print('the sum of{0} and {1} is {2}'.format(a,b,c) )  ##  the sum of32 and 21 is 53"
+    "print('the sum of { 0 } and {1} is {2}'.format(a,b,c) )  ##  the sum of32 and 21 is 53"
    ]
   },
   {
@@ -193,17 +315,66 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "d =  { 'name':'hrkhan' ,'age':20  , 'class':'python','mobile':[8768566541 , 6596549684596 ] , 1 : \"adnan\"   }"
+    "### Dictionary:-\n",
+    "- Sequential ,mutable, unordered\n",
+    "- defined by { } symbol\n",
+    "- Each key is separated by its value from its colon ( : )value. The item are separated by comma ( , ) whole thing is enclosed in  curly brakets {  }.\n",
+    "#### Property:-\n",
+    "- More than 1 entry per key is not allowed . This mean “ no duplicate key is allowed “\n",
+    "    when duplicate key is encountered during assignment the last assignment will win.\n",
+    "- keys must be immutable this means you can use string ,number,tuple, while values can be of any sort of data type.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d =  { 'name':'hrkhan' ,'age':20  , 'class':'python','mobile':[8768566541 , 6596549684596 ]    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -220,17 +391,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "a = {'name':['hr','khan',3,4,5],'age':20,'class':'python','mobile':8768566541}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -298,20 +468,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "b={1:'hello',2:'bye' }\n"
+    "a = {\"A\" : 5 , \"B\" : 4 , \"C\" : 6 , \"D\": 7 }\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['A', 'B', 'C', 'D'])\n",
+      "dict_values([5, 4, 6, 7])\n"
+     ]
+    }
+   ],
    "source": [
-    "b[\"name\"] = \"adnan\""
+    "print(a.keys())\n",
+    "print(a.values())\n",
+    "a[\"name\"] = \"saman\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'saman'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.pop(\"name\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'A': 5, 'B': 4, 'C': 6, 'D': 7}"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
    ]
   },
   {
@@ -320,27 +541,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "b[1] = \"hello everyone\" "
+    "del a[\"A\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if \"F\" in a:\n",
+    "    a[\"F\"] = a[\"BF\"] + 1 \n",
+    "else:\n",
+    "    a[\"F\"] = 1 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'bye'"
+       "{'B': 6, 'C': 6, 'D': 7, 'F': 1}"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "b.pop(2)"
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 1, 'b': 3, 'c': 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1 = [(\"a\" , 1 ), (\"b\" , 3 ) , (\"c\"  , 4 )]\n",
+    "dic= dict(l1)\n",
+    "print(dic)"
    ]
   },
   {
@@ -361,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -431,23 +683,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = { \"a \" , \"assd\" , \"fff\" , \"deew\" , \"eEeeeë\"}"
+    "a = { \"a \" , \"assd\" , \"fff\" , \"deew\" , \"eEeeee\"}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'fff', 'a ', 'deew', 'eEeeeë', 'assd'}\n"
+      "{'fff', 'a ', 'assd', 'deew', 'eEeeee'}\n"
      ]
     }
    ],
@@ -457,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,14 +718,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'fff', 'a ', 'adnan', 'deew', 'eEeeeë', 'assd'}\n"
+      "{'fff', 'a ', 'adnan', 'assd', 'deew', 'eEeeee'}\n"
      ]
     }
    ],
@@ -483,16 +735,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'a '"
+       "'fff'"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,14 +764,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'deew', 'eEeeeë', 'assd'}\n"
+      "{'a ', 'assd', 'deew', 'eEeeee'}\n"
      ]
     }
    ],
@@ -588,16 +840,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "enter the 1st no:- 12\n",
-      "enter the 2nd no:-  12\n",
-      "enter the 3rd no:-  12\n"
+      "enter the 1st no:- 1\n",
+      "enter the 2nd no:-  1\n",
+      "enter the 3rd no:-  1\n"
      ]
     },
     {
@@ -613,7 +865,7 @@
     "b=int(input(\"enter the 2nd no:- \"))\n",
     "c=int(input(\"enter the 3rd no:- \"))\n",
     "\n",
-    "if a>b and a>c:\n",
+    "if (a>b and a>c):\n",
     "        print(\"a is greatest: \")\n",
     "elif b>c:\n",
     "     print(\"b is greatest\")\n",
@@ -625,10 +877,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter the 3rd no:-  6\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dividide by 2 and 3 \n"
+     ]
+    }
+   ],
+   "source": [
+    "a=int(input(\"enter the 3rd no:- \"))\n",
+    "if a%2==0 and a%3==0:\n",
+    "    print(\"dividide by 2 and 3 \")\n",
+    "elif a%2==0:\n",
+    "    print(\"dividide by 2\")\n",
+    "elif a%3==0:\n",
+    "    print(\"dividide by 3\")\n",
+    "\n",
+    "else:\n",
+    "    print(\"not dividide by 2 and 3 \")"
+   ]
   },
   {
    "cell_type": "code",
