--- a/day3.ipynb
+++ b/day3.ipynb
@@ -31,14 +31,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "enter n  3\n"
+      "enter n  4\n"
      ]
     },
     {
@@ -47,7 +47,8 @@
      "text": [
       "1\n",
       "2\n",
-      "3\n"
+      "3\n",
+      "4\n"
      ]
     }
    ],
@@ -56,7 +57,8 @@
     "\n",
     "i = 1 ## inilisation \n",
     "while(i<=a):\n",
-    "    print(i)\n",
+    "    print(i )\n",
+    "    #print(i , end=\"     \")\n",
     "    i+=1\n",
     "\n",
     "    "
@@ -64,10 +66,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Write a program to print even number upto n "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter n  2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=int(input(\"enter n \" ))\n",
+    "i=1\n",
+    "while(i<=n):\n",
+    "    if i%2==0:\n",
+    "        print(i)\n",
+    "    i+=1\n",
+    "        "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -78,14 +127,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the number :-   3\n"
+      "Enter the number :-   12\n"
      ]
     },
     {
@@ -94,6 +143,10 @@
      "text": [
       "1\n",
       "3\n",
+      "5\n",
+      "7\n",
+      "9\n",
+      "11\n",
       "good bye\n"
      ]
     }
@@ -110,30 +163,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the number  10\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 1\n",
-      "1 2 3 5 8 13 21 34 55 89 "
+      "0     1      1    2    4    8    16    32    64    128    256    "
      ]
     }
    ],
    "source": [
     "a = 0 \n",
     "b = 1 \n",
-    "n = 10\n",
-    "i = 1 \n",
-    "print(a , b )\n",
+    "n = int(input(\"Enter the number \"))\n",
+    "i=2\n",
+    "print(a ,  \"   \" , b , end=\"      \"  )\n",
     "while(i<=n):\n",
     "    c=a+b\n",
-    "    print(c , end=\" \")\n",
-    "    a=b\n",
-    "    b=c\n",
-    "    i+=1 "
+    "    print(c ,end=\"    \" )\n",
+    "    a =b\n",
+    "    \n",
+    "    i+=1\n",
+    "    "
    ]
   },
   {
@@ -141,7 +201,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "p"
+   ]
   },
   {
    "cell_type": "markdown",
