--- a/day3.ipynb
+++ b/day3.ipynb
@@ -258,22 +258,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter 1st no  12 \n",
-      "Enter 2nd number  15\n"
+      "Enter 1st no  12\n",
+      "Enter 2nd number  13\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15 12\n"
+      "13 12\n"
      ]
     }
    ],
@@ -295,22 +295,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 11 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "a , b, c = 10 , 11 ,12 \n",
+    "print(a , b, c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter 1st no  12\n",
-      "Enter 2nd number  23\n"
+      "Enter 1st no  11\n",
+      "Enter 2nd number  12\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23 12\n"
+      "12 11\n"
      ]
     }
    ],
@@ -323,32 +341,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0 0 \n",
-      "1 1 1 \n",
-      "2 2 2 \n",
-      "3 3 3 \n"
+      "0 0 0 0 0 \n",
+      "1 1 1 1 1 \n",
+      "2 2 2 2 2 \n",
+      "3 3 3 3 3 \n",
+      "4 4 4 4 4 \n",
+      "5 5 5 5 5 \n",
+      "6 6 6 6 6 \n",
+      "7 7 7 7 7 \n",
+      "8 8 8 8 8 \n",
+      "9 9 9 9 9 \n",
+      "out of the loop \n"
      ]
     }
    ],
    "source": [
     "### 2 - loop \n",
     "i = 0\n",
-    "m = 4 \n",
-    "n = 3\n",
+    "m = 10 \n",
+    "n = 5\n",
     "while(i<m):\n",
     "    j=0\n",
     "    while(j<n):\n",
     "        print(i , end= \" \")\n",
     "        j+=1\n",
     "    print()\n",
-    "    i+=1"
+    "    i+=1\n",
+    "print(\"out of the loop \")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- question no 2 of pattern "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* * * * \n",
+      "* * * * \n",
+      "* * * * \n",
+      "* * * * \n",
+      "out of the loop \n"
+     ]
+    }
+   ],
+   "source": [
+    " \n",
+    "i = 0\n",
+    "n = 4  \n",
+    "while(i<n):\n",
+    "    j=0\n",
+    "    while(j<n):\n",
+    "        print(\"*\" , end= \" \")\n",
+    "        j+=1\n",
+    "    print()\n",
+    "    i+=1\n",
+    "print(\"out of the loop \")"
    ]
   },
   {
@@ -382,21 +446,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "enter the  no:-  10\n"
+      "enter the  no:-  5\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100] <class 'list'>\n"
+      "[1, 4, 9, 16, 25] <class 'list'>\n"
      ]
     }
    ],
@@ -413,21 +477,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "enter the  no:-  10\n"
+      "enter the  no:-  5\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 6: 36, 7: 49, 8: 64, 9: 81, 10: 100} <class 'dict'>\n"
+      "{1: 1, 2: 4, 3: 9, 4: 16, 5: 25} <class 'dict'>\n"
      ]
     }
    ],
@@ -477,6 +541,60 @@
     "- [start: stop : step]\n",
     "- range(start,stop,step).\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, 10):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
