--- a/day3.ipynb
+++ b/day3.ipynb
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -717,33 +717,50 @@
       "h\n",
       "o\n",
       "n\n",
+      "Another Way \n",
       "p\n",
       "y\n",
       "t\n",
       "h\n",
       "o\n",
-      "n\n"
+      "n\n",
+      "swd\n",
+      "ded\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "swd\n",
+      "ded\n",
+      "3\n",
+      "4\n",
+      "5\n"
      ]
     }
    ],
    "source": [
-    "a=\"python\"\n",
+    "a = \"python\"\n",
+    "for i in range(len(a)):\n",
+    "    print(a[i])\n",
+    "print(\"Another Way \")\n",
     "for i in a:\n",
     "    print(i)\n",
-    "for i in range(len(a)):\n",
-    "    print(a[i])"
+    "lt =[\"swd\" ,\"ded\" ,3, 4,  5]\n",
+    "for i in lt:\n",
+    "    print(i)\n",
+    "for i in range(len(lt)):\n",
+    "    print(lt[i])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter name  adnan\n"
+      "Enter name  saman\n"
      ]
     },
     {
@@ -764,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +806,7 @@
     "for i in a:\n",
     "    print(i)    \n",
     "for i in range(len(a)):\n",
-    "    print(a[i])\n"
+    "    print(a[i])"
    ]
   },
   {
@@ -803,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +836,7 @@
    ],
    "source": [
     "a=\"python\"\n",
-    "for i in range(len(a)):    \n",
+    "for i in range(len(a)):\n",
     "    if(a[i]=='h'):\n",
     "        break\n",
     "    print(a[i])  \n",
@@ -828,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +867,6 @@
     "    if a[i]==\"h\":\n",
     "        continue\n",
     "    print(a[i])\n",
-    "    \n",
     "print(\"   you can under stand continue statement\")"
    ]
   },
