--- a/basic_question_on_python.ipynb
+++ b/basic_question_on_python.ipynb
@@ -26,7 +26,7 @@
     "- WAP to find the union of list\n",
     "- WAP to find the intersection of two list\n",
     "- WAP to search in a list  in log time \n",
-    "- WAP to add 1 in list  ; Input: [1,2,3] Output: [1,2,4] Explanation: The array represents the integer 123."
+    "- WAP to add 1 in list; Input: [1,2,3] Output: [1,2,4] Explanation: The array represents the integer 123 Input: [9,9,9] Output: [1,0,0,0] Explanation: The array represents the integer 999 ."
    ]
   },
   {
