--- a/day4.ipynb
+++ b/day4.ipynb
@@ -33,21 +33,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "list 1\n"
+      "list 1 2 3 \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1]\n"
+      "[1, 2, 3]\n"
      ]
     }
    ],
@@ -82,6 +82,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "list 1 0 11 2 4 54 23 5 55\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 0, 11, 2, 4, 54, 23, 5, 55]\n",
+      "0\n",
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "listt = [ int(i)  for i in input(\"list\").split()]\n",
+    "print(listt)\n",
+    "min =46547578896567\n",
+    "for i in listt:\n",
+    "    if min > i:\n",
+    "        min = i \n",
+    "print(min)\n",
+    "max =-46547578896567\n",
+    "for i in listt:\n",
+    "    if max < i:\n",
+    "        max = i \n",
+    "print(max)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [],
@@ -91,37 +128,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      " 234\n"
+      "Enter the no  1004\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "found \n"
+      " Not Found \n"
      ]
     }
    ],
    "source": [
     "listt = [ i  for i in range(1000)]\n",
-    "\n",
-    "x = 0 \n",
-    "b = int(input())\n",
+    "num = int(input(\"Enter the no \"))\n",
+    "flag = 0 \n",
     "for i in listt:\n",
-    "    if i==b:\n",
-    "        x = 1 \n",
-    "        print(\"found \")\n",
-    "        break \n",
-    "\n",
-    "if(x==0):\n",
-    "    print(\"Not Found\")\n"
+    "    if i==num:\n",
+    "        flag = 1 \n",
+    "        \n",
+    "        break\n",
+    "if(flag==0):\n",
+    "    print(\" Not Found \")\n",
+    "else:\n",
+    "    print(\"found\")"
    ]
   },
   {
@@ -261,7 +298,6 @@
     "listt =  [67, 45, 40, 34, 22, 17, 11]\n",
     "i = 0 \n",
     "n = len(listt)\n",
-    "\n",
     "while(i<n):\n",
     "    j=0\n",
     "    while(j <n- i -1):\n",
@@ -464,13 +500,197 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-e1098d7f698e>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-e1098d7f698e>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    [1 , 3, , 9 ]\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "[1 , 3, , 9 ]\n",
     "[1 , 4 ,0 , 0 ]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter num of elements in list 4\n",
+      "enter strings samad\n",
+      "enter strings habib\n",
+      "enter strings tuesday\n",
+      "enter strings monday\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "your largest length is : 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "li=[]\n",
+    "num=int(input(\"enter num of elements in list\"))\n",
+    "i=0\n",
+    "while(i<num):\n",
+    "    ele=str(input(\"enter strings\"))\n",
+    "    li.append(ele)\n",
+    "    i+=1\n",
+    "j=0\n",
+    "n=len(li)\n",
+    "max = 0 \n",
+    "while(j<n):\n",
+    "    if(max < len(li[j])):\n",
+    "        max = len(li[j])\n",
+    "    j+=1\n",
+    "print(\"your largest length is :\",max)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lst1 = [int(item) for item in input(\"Enter the list items : \").split()] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the list  10 11 12 13 14 15\n"
+     ]
+    }
+   ],
+   "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the list  10 111 12 13 14\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 111, 12, 13, 14]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lt1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my name is saman \n"
+     ]
+    }
+   ],
+   "source": [
+    "l1=[\"m\" ,  \"na\"  , \"i\"  , \"sa\"]\n",
+    "l2=[\"y\" ,  \"me\" , \"s\" , \"man\"]\n",
+    "s = \"\"\n",
+    "for i in range(len(l1)):\n",
+    "    s+=l1[i] + l2[i] + \" \"\n",
+    "print(s)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "number 1004\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " not  Found\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "listt = [ i  for i in range(1000)]\n",
+    "num = int(input(\"number\"))\n",
+    "start = 0 \n",
+    "end = len(listt) - 1 \n",
+    "flag = True \n",
+    "count = 0 \n",
+    "while(start<=end):\n",
+    "    mid = (start + end ) // 2\n",
+    "    count+=1\n",
+    "    if listt[mid]==num:\n",
+    "        flag = False \n",
+    "        break \n",
+    "    elif listt[mid] > num:\n",
+    "        end = mid - 1\n",
+    "    else:\n",
+    "        start = mid + 1 \n",
+    "if(flag):\n",
+    "    print(\" not  Found\")\n",
+    "else:\n",
+    "    print(\" Found \") \n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
