--- a/day4.ipynb
+++ b/day4.ipynb
@@ -687,6 +687,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mman  nas  ime  say  \n"
+     ]
+    }
+   ],
+   "source": [
+    "l1=[\"m\" ,  \"na\"  , \"i\"  , \"sa\"]\n",
+    "l2=[\"y\" ,  \"me\" , \"s\" , \"man\"]\n",
+    "s = \"\"\n",
+    "for i in range(len(l1)):\n",
+    "    s+=l1[i] + l2[len(l1)-1-i] + \"  \"\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
